fix: Replace deprecated URL constructor with URI.create().toURL()
Replaced deprecated new URL(String) constructor with modern
URI.create(String).toURL() approach for better URL validation.

Resolves Sonar java:S1874

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>